--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -4,6 +4,6 @@ services:
   web:
     build: .
     ports:
-      - "8080:80"  # Map port 8080 on the host to port 80 on the container
+      - "8080:80"  # Map port 8080 on your machine to port 80 in the container
     volumes:
-      - ./html:/usr/share/nginx/html  # Sync local files with container for live development
+      - ./:/usr/share/nginx/html  # Bind the host directory to the Nginx directory in the container
